@@ -1,8 +1,8 @@
-Copyright (c) 2008-12 Contributors
+Copyright (c) 2008-14 Contributors
 
 * All rights reserved.
 *
-* The OpenSim Maps software forms a part of the OpenSim WebInterface Redux, 
+* The OpenSim Maps software forms a part of the OpenSim Web Interface Redux, 
 * which can be found at http://forge.opensimulator.org/gf/project/opensimwi/
 *
 * Redistribution and use in source and binary forms, with or without
